--- a/Studiduell_Prototyp/www/css/frage.css
+++ b/Studiduell_Prototyp/www/css/frage.css
@@ -3,18 +3,27 @@ body {
 }
 
 #kategorieDiv {
-	margin-top: 0.3em;
+	text-indent:1em;
+	margin-top: 0.5em;
 	color: white;
 	background-color: #00BFFF;
 	opacity: 0.9;
-	font-size: 2em;
+	font-size: 0.75em;
 }
 
 #frageDiv {
 	color: white;
 	background-color: #A4A4A4;
 	opacity: 0.7;
-	font-size: 2em;
+	
+	height: 7em;
+	
+	font-size: 1em;
+	text-align: center;
+	vertical-align: middle;
+	
+	word-wrap: break-word;
+	
 	padding: 2em;
 	margin: 0.5em;
 	border-radius: 16px;
@@ -24,6 +33,8 @@ body {
 	display: table;
 	color: white;
 	width: 100%;
+	
+	text-align: center;
 }
 
 .row {
@@ -36,8 +47,18 @@ body {
 }
 
 .antwortButton {
+	font-size: 1em;
+	text-align: center;
+	vertical-align: middle;
+	display: visible;
+	
+	word-wrap: break-word !important;
+	white-space: normal !important;
+	line-height: normal !important;
+	
 	margin: 0.2em;
 	width: 100%;
+	height: 8em;
 }
 
 .buttonAusgewaehlt {
@@ -61,6 +82,7 @@ body {
 .antwortGegner{
 }
 
-#nextButtonDiv {
-	margin-top: 2em;
+#nextButton {
+	height: 1.5em;
+	text-align: center;
 }
