--- a/Studiduell_Prototyp/www/css/frage.css
+++ b/Studiduell_Prototyp/www/css/frage.css
@@ -47,7 +47,7 @@ body {
 }
 
 .antwortButton {
-	font-size: 1em;
+	font-size: 1em !important;
 	text-align: center;
 	vertical-align: middle;
 	display: visible;
@@ -57,7 +57,6 @@ body {
 	line-height: normal !important;
 	
 	margin: 0.2em;
-	width: 100%;
 	height: 8em;
 }
 
@@ -76,10 +75,6 @@ body {
 
 .buttonRand {
 	border: 2px solid #819FF7;
-}
-
-/*TODO*/
-.antwortGegner{
 }
 
 #nextButton {
