--- a/Studiduell_Prototyp/www/css/frage.css
+++ b/Studiduell_Prototyp/www/css/frage.css
@@ -80,3 +80,11 @@ body {
 #nextButton {
 	margin-top: 0.75em;
 }
+
+.popupDiv {
+	position: absolute;
+	
+	/* opponent name's properties */
+	color: white;
+	text-shadow : 1px 1px blue
+}
