--- a/Studiduell_Prototyp/www/css/spielerSuchen.css
+++ b/Studiduell_Prototyp/www/css/spielerSuchen.css
@@ -2,7 +2,8 @@ body {
 	background-color: #1C1C1C;
 }
 
-.custom_List_item {
+.custom_List_item 
+	
 	/*
 	margin-left: 60px; 
 	vertical-align: middle;
@@ -10,30 +11,43 @@ body {
 	list-style-type: none;
 	*/
 }
-.custom_icon_button {
-	margin-bottom: 1em;
-	width: 100%; 
+
+#search_username_input{
+	background-image: url("../images/Lupe.png"); 
+}
+#sucheButton{
+	background-image: url("../images/Lupe.png");
 	background-repeat: no-repeat;
 	background-position: right;
 	background-size: 3em;
+	
+	width: 3.4em;
+	height: 3.4em;
+	
+	margin-top: 1em;
+	padding-bottom: 1.6em;
+
 }
 
-#ergebnislisteDiv {
+#addFriendButton{
+	background-image: url("../images/addicon.png");
+	background-position: center;
+	background-repeat: no-repeat;
+	background-size: 3em;
+	
+	width: 2.4em;
+	height: 2.4em;
+	border-radius: 50%;
+	padding-top: 0.7em;
+}
+
+#suchTabelle_div {
+	display: table;
+	width: 100%; 
+}
+
+#ergebnislisteDiv{
 	visibility: hidden;
-}
-
-#search_username_input{
- background-image: url("../images/Lupe.png");
- 
-}
-#sucheButton{
-background-image: url("../images/Lupe.png");
-width: 3.4em;
-height: 95%;
-margin-top: 0.4em;
-}
-
-#SuchTabelle_div {
 	display: table;
 	width: 100%;
 }
@@ -44,4 +58,20 @@ margin-top: 0.4em;
 
 .row>div {
 	display: table-cell;
+}
+
+.leftColumn, .rightColumn {
+	display: table-cell;
+}
+
+.leftColumn {
+    display: table-cell;
+	text-align: left;
+	width: 90%;
+}
+
+.rightColumn {
+	display: table-cell;
+	text-align: middle;
+	width: 10%;
 }
