--- a/Studiduell_Prototyp/www/css/home.css
+++ b/Studiduell_Prototyp/www/css/home.css
@@ -63,6 +63,7 @@ background-image: url("../images/profilbild.png">);
 #AbmeldenButton{
 color: white;
 text-shadow: 0 0px rgba(0,0,0,0.36);
+box-shadow: inset 0 1px rgba(255,255,255,0.36);
 background-position: 0px 0px;
 background-color: #ec514e;
 }
