--- a/Studiduell_Prototyp/www/css/home.css
+++ b/Studiduell_Prototyp/www/css/home.css
@@ -1,3 +1,5 @@
+topcoat-button 	center 	full custom_icon_button_left 	Rand2 
+topcoat-button--cta center 	full custom_icon_button_right
 
 #neuesSpielStartenButton {
 	background-image: url("../images/plus.png");
