--- a/Studiduell_Prototyp/www/css/home.css
+++ b/Studiduell_Prototyp/www/css/home.css
@@ -68,4 +68,5 @@ text-shadow: 0 0px rgba(0,0,0,0.36);
 box-shadow: inset 0 1px rgba(255,255,255,0.36);
 background-position: 0px 0px;
 background-color: #ec514e;
+margin-bottom: 0.5 rem;
 }
