--- a/Studiduell_Prototyp/www/css/application.css
+++ b/Studiduell_Prototyp/www/css/application.css
@@ -14,3 +14,12 @@ input, textarea, [contenteditable] * {
 .mid {
  text-align: center 
 }
+
+body{
+color: white;
+background-image: url('../images/box-bg@2x.png');
+-webkit-background-size: cover; /* For WebKit*/
+-moz-background-size: cover;    /* Mozilla*/
+-o-background-size: cover;      /* Opera*/
+background-size: cover;         /* Generic*/
+}
