--- a/Studiduell_Prototyp/www/css/frage.css
+++ b/Studiduell_Prototyp/www/css/frage.css
@@ -4,9 +4,9 @@
 	text-indent:1em;
 	margin-top: 0.5em;
 	color: white;
-	background-color: #00BFFF;
 	opacity: 0.9;
-	font-size: 0.75em;
+	font-size: 0.75em; 
+	font-weight: bold;
 }
 
 #frageDiv {
