--- a/Studiduell_Prototyp/www/css/home.css
+++ b/Studiduell_Prototyp/www/css/home.css
@@ -1,12 +1,11 @@
 #neuesSpielStartenButton {
 	background-image: url("../images/plus.png");
-	margin-top: 1.5rem !important;
 	margin-bottom: 0.5rem !important;
-	
+	opacity: 0.85;
 }
 
 #neuesSpielStartenDIV{
-margin-top: 1.5rem !important;
+margin-top: 1rem !important;
 }
 
 
@@ -21,16 +20,19 @@ font-weight: bold;
 .yourTurnButton {
 	background-image: url("../images/profilbild.png");
 	border: 1px solid back;
+	opacity: 0.85;
 }
 
 .waitingForButton {
 	background-image: url("../images/profilbild.png");
 	border: 1px solid grey;
+	opacity: 0.85;
 }
 
 .historyButton {
 	background-image: url("../images/profilbild.png");
 	border: 1px solid grey;
+	opacity: 0.85;
 }
 
 
@@ -89,8 +91,10 @@ text-shadow: 0 0px rgba(0,0,0,0.36);
 box-shadow: inset 0 1px rgba(255,255,255,0.36);
 background-position: 0px 0px;
 background-color: #ec514e;
+opacity: 0.85;
 
 }
 #SyncButton{
 margin-bottom: 0.2rem;
+opacity: 0.85;
 }
