--- a/Studiduell_Prototyp/www/css/home.css
+++ b/Studiduell_Prototyp/www/css/home.css
@@ -1,5 +1,7 @@
 #neuesSpielStartenButton {
 	background-image: url("../images/plus.png");
+	background-repeat: no-repeat;
+	background-position:95% 50%;
 	margin-bottom: 0.5rem !important;
 	opacity: 0.85;
 }
@@ -11,10 +13,6 @@ margin-top: 1rem !important;
 
 #username_div{
 font-weight: bold;
-}
-
-#rundenuebersichtButton {
-	background-image: url("../images/lupe.png");
 }
 
 .yourTurnButton {
@@ -40,7 +38,7 @@ font-weight: bold;
 	margin-bottom: 1em;
 	width: 100%; 
 	background-repeat: no-repeat;
-	background-position: left;
+	background-position: 5% 50%;
 	background-size: 2em;
 	margin-bottom: 0.2rem;
 }
@@ -49,18 +47,10 @@ font-weight: bold;
 	margin-bottom: 1em;
 	width: 100%; 
 	background-repeat: no-repeat;
-	background-position: right;
+	background-position: 95% 50%;
 	background-size: 2em;
 }
-.RechteckWartenAuf {
-	border: 1px solid black;
-	width: 100%;
-	height: 50px;
-	border-radius: 3px;
-	margin-left: 0.1em;
-	margin-right: 0.1em;
-	background-color: grey;
-}
+
 
 .textmid {
 	text-align: center;
