App: abrunden listenheader

--- a/Studiduell_Prototyp/www/css/frage.css
+++ b/Studiduell_Prototyp/www/css/frage.css
@@ -77,11 +77,11 @@
 .buttonRand {
 	border: 2px solid #819FF7;
 }
-
+/*
 #nextButton {
 	margin-top: 0.75em;
 }
-
+*/
 .popupDiv {
 	position: absolute;
 	
