--- a/Studiduell_Prototyp/www/css/spielerSuchen.css
+++ b/Studiduell_Prototyp/www/css/spielerSuchen.css
@@ -72,6 +72,11 @@
 	visibility: hidden;
 	display: table;
 	width: 100%;
+	border-radius: 0.2rem;
+}
+
+#ergebnisliste_header{
+	border-radius: 0.2rem;
 }
 
 .row {
