--- a/Studiduell_Prototyp/www/css/ausgewaehlteKategorie.css
+++ b/Studiduell_Prototyp/www/css/ausgewaehlteKategorie.css
@@ -7,3 +7,7 @@ font-size: 1.5rem;
 font-weight: bold;
 font-size: 1.5rem;
 }
+
+body{
+/* background-image: url('../images/Ladescreen@2x.png'); */
+}
