--- a/Studiduell_Prototyp/www/css/neuesSpiel.css
+++ b/Studiduell_Prototyp/www/css/neuesSpiel.css
@@ -21,5 +21,5 @@
 }
 
 #beliebigerSpielerButton {
-	background-image: url("../images/lupe.png");
+	background-image: url("../images/Würfel_Icon@2x.png");
 }
