App: Nicht-Image Buttons mit Farbverlauf
+Quadrate in RÜ

--- a/Studiduell_Prototyp/www/css/login.css
+++ b/Studiduell_Prototyp/www/css/login.css
@@ -10,6 +10,8 @@ width: 97% !important;
 .custom_button{
 margin: 0.35rem;
 width: 97% !important;
+background-image: -webkit-gradient(linear, left top, left bottom, from( #E4E4E4), to( #A4A4A4)); /* Saf4+, Chrome */
+	
 }
 
 #LoginButton{
