--- a/Studiduell_Prototyp/www/css/register.css
+++ b/Studiduell_Prototyp/www/css/register.css
@@ -7,6 +7,8 @@ width: 97% !important;
 #RegisterButton{
 margin: 0.35rem;
 width: 97% !important;
+background-image: -webkit-gradient(linear, left top, left bottom, from( #E4E4E4), to( #A4A4A4)); /* Saf4+, Chrome */
+	
 }
 
 #Anweisung_div{
