--- a/Studiduell_Prototyp/www/css/kategorieAuswaehlen.css
+++ b/Studiduell_Prototyp/www/css/kategorieAuswaehlen.css
@@ -11,4 +11,6 @@
 	width: 80%;
 	font-size: 1.0em;
 	opacity: 0.85;
+	background-image: -webkit-gradient(linear, left top, left bottom, from( #E4E4E4), to( #A4A4A4)); /* Saf4+, Chrome */
+    
 }
