App: Moved CSS-class invalidCustom to application.css

--- a/Studiduell_Prototyp/www/css/application.css
+++ b/Studiduell_Prototyp/www/css/application.css
@@ -20,3 +20,10 @@ color: black;
 background-image: url('../images/background.jpg');
 
 }
+
+/*
+ * Border for a field that contains incorrect input.
+ */
+.invalidCustom {
+  border: 1px solid #ec514e;
+}
