--- a/Studiduell_Prototyp/www/css/application.css
+++ b/Studiduell_Prototyp/www/css/application.css
@@ -27,3 +27,18 @@ background-image: url('../images/background.jpg');
 .invalidCustom {
   border: 1px solid #ec514e;
 }
+
+/* global loading class for ajax requests */
+.loading {
+	background-color: black;
+	background-image: url("../images/ajax-loader.gif");
+	background-repeat: no-repeat;
+	background-position: center;
+	opacity: 0.75;
+	
+	position: fixed;
+	width: 100%;
+	height: 100%;
+	top: 0px;
+	left: 0px;
+}
